# ewc-desafio

./: README.md  pyproject.toml
case_ewc/: main.py  ranking.py
case_ewc/ingestion/: apply.py
case_ewc/ingestion/games/: cs.py  fc24.py  r6.py  rocket.py  sf6.py
case_ewc/processing/: chart.py  ranking.py
data/: furia_matches.json  furia_ranking.json
utils/: check_win.py  constants.py
