[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ewc-desafio"
version = "0.0.1"
description = "Desafio Estágio Fúria."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    pandas,
    matplotlib
]

[project.optional-dependencies]
dev = [
    "taskipy",
    "ruff",
    "pytest"
]

[project.urls]
homepage = "https://github.com/rafaeltiribas/ewc-desafio"
documentation = "https://github.com/rafaeltiribas/ewc-desafio/README.md"

[tool.ruff]
line-length = 79

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.taskipy.tasks]
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."
test = "pytest"
run = "python main.py"
